[gd_scene load_steps=6 format=3 uid="uid://bp5o5virmc26t"]

[ext_resource type="Script" uid="uid://dh8tdj4sf2vmo" path="res://ui/settings_menu_screen.gd" id="1_v7tl4"]
[ext_resource type="Texture2D" uid="uid://brxrgtky1mgiy" path="res://ui/environment-preview.png" id="2_uaw1e"]
[ext_resource type="Theme" uid="uid://bvr3vkan5w3sp" path="res://ui/theme/game_theme.tres" id="3_tiwjb"]
[ext_resource type="Texture2D" uid="uid://w28afehlkvya" path="res://ui/player-run-4.png" id="4_u0dvs"]
[ext_resource type="Texture2D" uid="uid://cdcyiyj4wwkrf" path="res://ui/crab-walk-1.png" id="5_doxyc"]

[node name="SettingsMenuScreen" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_v7tl4")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.517647, 0.513726, 0.360784, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -328.0
offset_top = -69.0
offset_right = 248.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uaw1e")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_tiwjb")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="WindowModeOptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResolutionOptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="HelpMenuButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "help"

[node name="HelpDialog" type="AcceptDialog" parent="MarginContainer"]
title = "Help & Controls"
initial_position = 1
size = Vector2i(448, 179)
visible = true

[node name="Label" type="Label" parent="MarginContainer/HelpDialog"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 8.0
offset_right = 440.0
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "Controls:

- Arrow Keys / WASD: Move
- Space: Jump
- Z: Shoot

Tips:

- Collect coins and gems to increase score.
- Avoid enemies and traps!"

[node name="Player-run-4" type="Sprite2D" parent="."]
position = Vector2(184, 229)
texture = ExtResource("4_u0dvs")

[node name="Crab-walk-1" type="Sprite2D" parent="."]
position = Vector2(278, 232)
texture = ExtResource("5_doxyc")

[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindowModeOptionButton" to="." method="_on_window_mode_option_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ResolutionOptionButton" to="." method="_on_resolution_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HelpMenuButton" to="." method="_on_help_menu_button_pressed"]
